# lunadev-2024

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  PozyxConfig.yaml  README.md  lunadev-2024.code-workspace  settings.toml  udevstuff
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: docker-image.yml  release.yml
apriltag/: Cargo.toml
apriltag-test/: Cargo.toml
apriltag-test/src/: main.rs
apriltag/examples/: focal-length-estimation.rs  webcam.rs
apriltag/src/: lib.rs
archimedes/: Cargo.toml
camera/: Cargo.toml
camera-db/: common.json
camera-info/: Cargo.toml
camera-info/examples/: examine.rs
camera-info/src/: lib.rs  sub.rs
camera/src/: lib.rs  main.rs
commands_architecture/: Cargo.toml  README.md  command.rs  commands_runner.rs
commands_architecture/src/: command.rs  commands_runner.rs  lib.rs
compute-shader/: Cargo.toml
compute-shader/examples/: matrix.rs  matrix.wgsl  mul2.rs  mul2.wgsl  transform.rs  transform.wgsl
compute-shader/src/: buffers.rs  lib.rs
costmap/: Cargo.toml
costmap/src/: global.rs  lib.rs  local.rs
drive/: Cargo.toml
drive/src/: lib.rs
eigenvalues/: Cargo.toml
eigenvalues/src/: matrix_operations.rs  modified_gram_schmidt.rs  utils.rs
eigenvalues/tests/: tests_lanczos.rs
global-msgs/: Cargo.toml
global-msgs/src/: lib.rs
launch/: README.md  arch.py  rs_launch.py
localization/: Cargo.toml
localization/src/: calib.rs  data.rs  frames.rs  lib.rs  main.rs  optimizers.rs  run.rs  utils.rs
localization/src/engines/: mcl.rs  mod.rs  window.rs
lunabase/: base_bashrc_append.sh  boulder.tscn  compose.yaml  ffmpeg.gd  icon.png.import  icon.svg.import  luna.dockerfile  lunabase.gdextension  lunabase.tscn  lunabase_bashrc_append.sh  lunabot.gd  lunaportal.gd  lunaportal.tscn  lunasim.tscn  main.tscn  project.godot  ray_scanner.gd  ray_scanner.tscn  ui.gd  waypoint.tscn
lunabase-lib/: Cargo.toml
lunabase-lib/src/: lib.rs  telemetry.rs
lunabase/BetterProcesses/: BetterProcesses.gdextension  example.tscn
lunabot/: Cargo.toml
lunabot-lib/: Cargo.toml
lunabot/src/: actuators.rs  audio.rs  drive.rs  drive_vesc.py  lib.rs  lunabot.toml  main.rs  serial.rs  telemetry.rs
lunabotics/lunabase/: .gitignore  README.md  arrow.tscn  camera.sdp  export_presets.cfg  icon.png.import  lunabase.gdextension  lunabase.tscn  lunabot.gd  lunaportal.tscn  main.tscn  project.godot  ray_scanner.gd
lunabotics/lunabase-lib/: Cargo.toml
lunabotics/lunabot/: Cargo.toml
lunabotics/lunabot-lib/: Cargo.toml
lunabotics/lunabot/src/: actuators.rs  audio.rs  autonomy.rs  drive.rs  drive_vesc.py  imu.rs  lunabot.toml  main.rs  mosaic.rs  serial.rs  telemetry.rs
lunabotics/lunadev/: README.md  unmute_all.sh
lunabotics/lunasimbot/: Cargo.toml
lunabotics/lunasimbot/src/: main.rs
lunadev/: 99-usr.rules  README.md  base_bashrc_append.sh  client_telemetry.py  client_tunnel.py  client_vnc.py  compose.yaml  luna.dockerfile  lunadev-2024.code-workspace  reset_usb.py  start_telemetry_tunnel.py  start_vnc.py
lunadev/.devcontainer/: devcontainer.json
lunasim/: Pipfile
lunasim/blind/: blind.py
lunasimbot/: Cargo.toml
lunasimbot/src/: lunabot.toml  main.rs  rays.rs
lunatick0/: Cargo.toml  Embed.toml
lunatick0/src/: main.rs
machine-academy/: Cargo.toml
machine-academy/src/: lib.rs
machine-academy/src/common/: mod.rs  time_series.rs
machine-academy/src/data/: mod.rs
misc/compute-shader/: Cargo.toml
misc/compute-shader/src/: lib.rs
misc/compute-shader/src/tests/: mod.rs  mul2.wgsl
misc/py-repl/: Cargo.toml
navigator/: Cargo.toml
navigator/src/: drive.rs  lib.rs  pathfinders.rs  pathfinding.rs  successors.py  successors.rs  utils.rs
navigator/src/drive/: diff.rs  mod.rs
navigator/src/pathfinders/: global.rs  mod.rs
navigator/src/pathfinders/local/: mod.rs  pathfinding.rs
navigator/src/pathfinding/: alg.rs  direct.rs  mod.rs
networking/: Cargo.toml
networking/src/: lib.rs  negotiation.rs  peer.rs
obstacles/: Cargo.toml
obstacles/src/: lib.rs  utils.rs
positioning/: Cargo.toml
positioning/src/: lib.rs
py-repl/src/: lib.rs  main.rs
realsense/: Cargo.toml
realsense/examples/: costmap.rs
realsense/src/: implementation.rs  iter.rs  lib.rs  main.rs
rig/: Cargo.toml
rig/src/: lib.rs
rig/src/joints/: mod.rs
serial/: Cargo.toml
serial/src/: lib.rs  main.rs
smach/: Cargo.toml
smach/src/: lib.rs
smooth-diff-drive/: Cargo.toml
smooth-diff-drive/src/: drive.rs  lib.rs  main.rs  sorting.py
splines/: Meeting.md
src/bot_descriptions/: CMakeLists.txt  package.xml
src/camera/: package.xml  setup.py
src/drive/: package.xml  setup.cfg  setup.py
src/global_msgs/: CMakeLists.txt  package.xml
src/launch/: arch.py
src/launchers/: package.xml  setup.cfg  setup.py
src/mining_arm/: package.xml  setup.cfg  setup.py
src/positioning/: package.xml  setup.cfg  setup.py
src/py_globals/: package.xml  setup.cfg  setup.py
src/telemetry/: package.xml  setup.cfg  setup.py
telemetry/: Cargo.toml
telemetry/src/: lib.rs  main.rs
tools/: Cargo.toml
tools/src/: main.rs
unros/: Cargo.toml
unros-core/: Cargo.toml
unros-core/src/: dump.rs  float.rs  lib.rs  node.rs  rng.rs  runtime.rs  time.rs  utils.rs
unros-core/src/logging/: dump.rs  eyre.rs  mod.rs  rate.rs
unros-core/src/pubsub/: mod.rs  subs.rs
unros-core/src/service/: mod.rs
unros-core/src/signal/: bounded.rs  mod.rs  unbounded.rs  watched.rs
unros-core/src/task/: mod.rs
unros-macros/: Cargo.toml
unros-macros/src/: lib.rs
unros/apriltag/: Cargo.toml
unros/camera/: Cargo.toml
unros/camera-info/: Cargo.toml
unros/navigator/: Cargo.toml
unros/navigator/src/: lib.rs
unros/navigator/src/pathfinding/: alg.rs  direct.rs  mod.rs
unros/obstacles/: Cargo.toml
unros/obstacles/src/: lib.rs  utils.rs
unros/obstacles/src/sources/: depth.rs  depth.wgsl  intersect.wgsl
unros/realsense/: Cargo.toml
unros/realsense/examples/: costmap.rs
unros/realsense/src/: implementation.rs  lib.rs  project.wgsl
unros/rig/: Cargo.toml
usb-pluggy/: Cargo.toml
(+58 files in other folders)
