[workspace]
members = [
    "unros-core",
    "telemetry",
    "global-msgs",
    "lunabot",
    "drive",
    "camera",
    "apriltag",
    # If you do not have the RealSense SDK, remove the realsense member
    "realsense",
    "localization",
    "serial",
    "navigator",
    "rig", "tools", "smach", "costmap", "smooth-diff-drive",
]
resolver = "2"

[workspace.dependencies]
fxhash = "0.2"
static_assertions = "1"
image = "0.24"
ordered-float = "4"
nalgebra = { version = "0.32", features = ["serde-serialize"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
crossbeam = "0.8"
quaternion-core = "0.4"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
fast_image_resize = "2"
spin_sleep = "1"
burn = { version = "0.11.1", features=["train", "wgpu"]}
rand = { version = "0.8", features = ["small_rng"] }
tokio-rayon = "2"
serde-big-array = "0.5.1"
rand_distr = "0.4.3"

# The following crates need to run at full power
# in most contexts to be effective.
[profile.dev.package.realsense]
opt-level = 3

[profile.dev.package.apriltag]
opt-level = 3

[profile.dev.package.localization]
opt-level = 3

[profile.dev.package.camera]
opt-level = 3

[profile.dev.package.lunabot]
opt-level = 3
