[workspace]
members = [
    "unros-core",
    "global-msgs",
    "lunabot",
    "drive",
    "camera",
    "apriltag",
    "realsense",
    "localization",
    "serial",
    "navigator",
    "rig", "tools", "smach", "costmap",
    # "smooth-diff-drive",
    "lunasimbot", "unros-macros", "unros", "lunabase-lib", "camera-info", "networking",
]
resolver = "2"

[workspace.dependencies]
fxhash = "0.2"
chrono = "0.4"
static_assertions = "1"
image = "0.24"
ordered-float = "4"
nalgebra = { version = "0.32", features = ["serde-serialize"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
crossbeam = "0.8"
quaternion-core = "0.4"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
fast_image_resize = "2"
spin_sleep = "1"
rand = { version = "0.8", features = ["small_rng"] }
serde-big-array = "0.5"
rand_distr = "0.4"
bytemuck = "1"
log = "0.4"
eigenvalues = { git = "https://github.com/Masterchef365/eigenvalues.git" }
ffmpeg-sidecar = "1.0"
interprocess = { git = "https://github.com/kotauskas/interprocess", default-features = false, branch = "main", features = ["tokio"] }

# The following crates need to run at full power
# in most contexts to be effective.
[profile.dev.package.realsense]
opt-level = 3

[profile.dev.package.apriltag]
opt-level = 3

[profile.dev.package.localization]
opt-level = 3

[profile.dev.package.camera]
opt-level = 3

[profile.dev.package.lunabot]
opt-level = 3

[profile.dev.package.lunabase-lib]
opt-level = 3
