[package]
name = "costmap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unros-core = { path = "../unros-core" }
nalgebra = { workspace = true }
image = { workspace = true, optional = false }
spin_sleep = "1"