[package]
name = "costmap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unros = { path = "../unros" }
nalgebra = { workspace = true }
image = { workspace = true, optional = false }
spin_sleep = { workspace = true }
ordered-float = { workspace = true }
simba = { workspace = true }
quadtree_rs = "0.1"
rig = { path = "../rig" }
dst-init = { workspace = true }
