[package]
name = "localization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unros-core = { path = "../unros-core" }
nalgebra = { workspace = true }
rig = { path = "../rig" }
quaternion-core = { workspace = true }
smach = { path = "../smach" }
fxhash = { workspace = true }
rand_distr = { workspace = true }
rand = { workspace = true }
eigenvalues = { workspace = true }