[package]
name = "localization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unros = { path = "../unros" }
nalgebra = { workspace = true }
rig = { path = "../rig" }
# quaternion-core = { workspace = true }
smach = { path = "../smach" }
fxhash = { workspace = true }
rand_distr = { workspace = true }
rand = { workspace = true }
eigenvalues = { git = "https://github.com/manglemix/eigenvalues.git" }
crossbeam = { workspace = true }
simba = { workspace = true }
# ordered-float = { workspace = true }