[package]
name = "lunabase-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = ["experimental-threads"]}
crossbeam = { workspace = true }
# ffmpeg-sidecar = { workspace = true }
# interprocess = { workspace = true }
networking = { path = "../networking" }
unros = { path = "../unros" }
lunabot = { path = "../lunabot" }