[package]
name = "lunabot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unros-core = { path = "../unros-core" }
telemetry = { path = "../telemetry" }
realsense = { path = "../realsense" }
camera = { path = "../camera" }
navigator = { path = "../navigator" }
localization = { path = "../localization" }
apriltag = { path = "../apriltag" }
rig = { path = "../rig" }
nalgebra = { workspace = true }
toml = { workspace = true }
fxhash = { workspace = true }
las = "0.8"
costmap = { path = "../costmap" }