[package]
name = "lunabot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unros = { path = "../unros" }
networking = { path = "../networking" }
camera = { path = "../camera" }
navigator = { path = "../navigator" }
localization = { path = "../localization" }
apriltag = { path = "../apriltag" }
rig = { path = "../rig" }
nalgebra = { workspace = true }
toml = { workspace = true }
fxhash = { workspace = true }
serial = { path = "../serial" }
# las = "0.8"
costmap = { path = "../costmap" }
camera-info = { path = "../camera-info" }
spin_sleep = { workspace = true }
image = { workspace = true }
serde = { workspace = true }
ordered-float = { workspace = true }

[target.'cfg(unix)'.dependencies]
realsense = { path = "../realsense" }