[package]
name = "lunasimbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unros = { path = "../unros" }
rig = { path = "../rig" }
costmap = { path = "../costmap" }
fxhash = { workspace = true }
nalgebra = { workspace = true }
toml = { workspace = true }
navigator = { path = "../navigator" }
localization = { path = "../localization" }
rand_distr = { workspace = true }
interprocess = { workspace = true }