[package]
name = "machine-academy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = { workspace = true }
serde = { workspace = true }
tokio-rayon = { workspace = true }
crossbeam = { workspace = true }
rand = { workspace = true }
toml = { workspace = true }
# fxhash = { workspace = true }
bincode = "1"
chrono = { workspace = true }