[package]
name = "navigator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unros-core = { path = "../unros-core" }
global-msgs = { path = "../global-msgs" }
rig = { path = "../rig" }
nalgebra = { workspace = true }
ordered-float = { workspace = true }
costmap = { path = "../costmap" }
spin_sleep = { workspace = true }
pathfinding = "4"