[package]
name = "navigator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# crossbeam = { workspace = true }
unros = { path = "../unros" }
rig = { path = "../rig" }
nalgebra = { workspace = true }
ordered-float = { workspace = true }
costmap = { path = "../costmap" }
spin_sleep = { workspace = true }
pathfinding = "4"
fxhash = { workspace = true }
indexmap = "2.2.3"