[package]
name = "networking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unros = { path = "../unros" }
enet = "0.3"
fxhash = { workspace = true }
serde = { workspace = true }
bitcode = "0.5"
# bimap = "0.6"