[package]
name = "networking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unros = { path = "../unros" }
laminar = "0.5"
fxhash = { workspace = true }
serde = { workspace = true }
# crossbeam = { workspace = true }
spin_sleep = { workspace = true }
bitcode = "0.6"
# bimap = "0.6"