[package]
name = "realsense"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unros = { path = "../unros" }
image = { workspace = true }
bytemuck = { workspace = true }

[target.'cfg(unix)'.dependencies]
realsense-rust = { version = "1.2", features = ["buildtime-bindgen"] }
cam-geom = "0.14"
fast_image_resize = { workspace = true }
localization = { path = "../localization" }
nalgebra = { workspace = true }
rig = { path = "../rig" }
quaternion-core = { workspace = true }