[package]
name = "realsense"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unros = { path = "../unros" }
image = { workspace = true }
# bytemuck = { workspace = true }

[target.'cfg(unix)'.dependencies]
realsense-rust = { version = "1.2", features = ["buildtime-bindgen"] }
realsense-sys = { version = "2" }
localization = { path = "../localization" }
nalgebra = { workspace = true }
rig = { path = "../rig" }
ordered-float = { workspace = true }
quaternion-core = { workspace = true }

[dev-dependencies]
costmap = { path = "../costmap" }