[package]
name = "rig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = { workspace = true }
nalgebra = { workspace = true }
serde = { workspace = true }
fxhash = { workspace = true }
anyhow = { workspace = true }
crossbeam = { workspace = true }