[package]
name = "serial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-serial = "5"
unros-core = { path = "../unros-core" }
embedded-hal = "0.2"
nb = "1"
vesc-comm = { git = "https://github.com/fmckeogh/vesc-comm.git" }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
