[package]
name = "serial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-serial = "5"
unros = { path = "../unros" }
vesc-comm = { git = "https://github.com/manglemix/vesc-comm.git" }
# tokio-util = { version = "0.7", features = ["codec"] }
# futures = "0.3"
# crossbeam = "0.8"
