[package]
name = "smooth-diff-drive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unros-core = { path = "../unros-core" }
serde = { workspace = true }
burn = { workspace = true }
tokio-rayon = { workspace = true }
crossbeam = { workspace = true }
rand = { workspace = true }
clap = { workspace = true }
# serde-big-array = { workspace = true }
# serde_json = "1"
rand_distr = { workspace = true }
rusqlite = "0.30"
bytemuck = { workspace = true }