[package]
name = "smooth-diff-drive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unros-core = { path = "../unros-core" }
machine-academy = { git = "https://github.com/manglemix/machine-academy.git", features = ["burn-ndarray"] }
serde = { workspace = true }
rand = { workspace = true }
clap = { workspace = true }
rand_distr = { workspace = true }
serde-big-array = { workspace = true }
crossbeam = { workspace = true }