[package]
name = "unros-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fern = { version = "0.6", features = ["colored"] }
chrono = { workspace = true }
log = "0.4"
tokio = { workspace = true }
crossbeam = { workspace = true }
rand = { workspace = true }
async-trait = "0.1"
static_assertions = { workspace = true }
bytes = "1"
console-subscriber = { version = "0.2", features = ["parking_lot"]}
serde = { workspace = true }
anyhow = { workspace = true }
image = { workspace = true, optional = false }
# spin_sleep = { workspace = true }
tokio-rayon = { workspace = true }
ffmpeg-sidecar = "1.0"
# srtlib = "0.1"
sysinfo = "0.30"
config = "0.14"
color-eyre = { version = "0.6", default-features = false }
ctrlc = "3.4.2"