[package]
name = "unros-core"
version = "0.1.2"
edition = "2021"
description = "stub"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fern = { version = "0.6", features = ["colored"] }
chrono = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
crossbeam = { workspace = true }
rand = { workspace = true }
# static_assertions = { workspace = true }
# console-subscriber = { version = "0.2", features = ["parking_lot"]}
serde = { workspace = true }
anyhow = { workspace = true }
image = { workspace = true, optional = false }
# spin_sleep = { workspace = true }
ffmpeg-sidecar = { workspace = true }
# srtlib = "0.1"
sysinfo = "0.30"
config = "0.14"
color-eyre = { version = "0.6", default-features = false }
ctrlc = "3.4.2"
rayon = { workspace = true }
nalgebra = { workspace = true }
simba = { workspace = true }
ordered-float = { workspace = true }
show-image = { version = "0.14.0", features = ["image"] }