[package]
name = "lunabot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unros = { workspace = true }
camera = { workspace = true }
# localization = { workspace = true }
apriltag = { workspace = true }
networking = { workspace = true }
rig = { workspace = true }
nalgebra = { workspace = true }
toml = { workspace = true }
fxhash = { workspace = true }
serial = { workspace = true }
# las = "0.8"
spin_sleep = { workspace = true }
image = { workspace = true }
serde = { workspace = true }
ordered-float = { workspace = true }
py-repl = { workspace = true }
lunabot-lib = { path = "../lunabot-lib" }
base64 = "0"
rodio = "0"
