[package]
name = "lunasimbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = { workspace = true }
nalgebra = { workspace = true }
toml = { workspace = true }
unros = { workspace = true }
rig = { workspace = true }
obstacles = { workspace = true }
navigator = { workspace = true }
localization = { workspace = true }
rand_distr = { workspace = true }
# interprocess = { workspace = true }
image = { workspace = true }