[package]
name = "compute-shader"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "0.20"
anyhow = { workspace = true }
bytemuck = { workspace = true }
tokio = { workspace = true }
crossbeam = { workspace = true }
futures = { workspace = true }
fxhash = { workspace = true }
# rayon = { workspace = true }

[dev-dependencies]
env_logger = "0"
# rand = { workspace = true }
nalgebra = { workspace = true }