[package]
name = "navigator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# crossbeam = { workspace = true }
unros = { workspace = true }
rig = { workspace = true }
nalgebra = { workspace = true }
obstacles = { workspace = true }
fxhash = { workspace = true }
ordered-float = { workspace = true }
spin_sleep = { workspace = true }
# pathfinding = "4"
indexmap = "2.2.3"
simba = { workspace = true }