[package]
name = "obstacles"
version = "0.1.0"
edition = "2021"

[dependencies]
unros = { workspace = true }
rig = { workspace = true }
compute-shader = { workspace = true }
nalgebra = { workspace = true }
crossbeam = { workspace = true }
bytemuck = { workspace = true }
async-trait = "0"
futures = "0"
bitvec = { workspace = true }
rand = { workspace = true }