[package]
name = "realsense"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unros = { workspace = true }
image = { workspace = true }
nalgebra = { workspace = true }
# bytemuck = { workspace = true }

[target.'cfg(unix)'.dependencies]
realsense-rust = { version = "1.2", features = ["buildtime-bindgen"] }
# realsense-sys = { version = "2" }
# pollster = "0"
